--- a/group.html
+++ b/group.html
@@ -111,7 +111,7 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Co-Supervised <!-- PhD --> Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
+    <li style="margin-top: 1ex;">Co-Supervised <!-- PhD --> Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario 2017-04 to 2022-12:<br/>
      Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2018-09 to 2018-12:<br/> <a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof Automation with SMT, Tactics, and Metaprograms</a></li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
@@ -228,16 +228,18 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 <!-- [Then Student Researcher at Université Denis Diderot]<br/>-->
-[Now MSc student at Université Paris Cité and research apprentice at <a href="https://www.irif.fr">IRIF</a>]
+[Then MSc student at Université Paris Cité and research apprentice at <a href="https://www.irif.fr">IRIF</a>]
+[Now Senior Compiler Engineer at Imagination Technologies]
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/floriangru">Florian Groult</a></b></li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.univ-orleans.fr/lifo///pageperso.php?id=300&lang=en">Florian Groult</a></b></li>
+  <!-- https://github.com/floriangru -->
   <ul>
     <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-14 to 2019-10:<br/>
     Memory Sharing for a Compartmentalizing Compiler</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.univ-orleans.fr/en/sciences-techniques/info">Orléans University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.univ-orleans.fr/en/sciences-techniques/info">Orléans University</a>] [Then PhD student at Université d'Orléans]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a></b>
   (Research Intern/Visitor from 2018-10 to 2019-01)
@@ -250,7 +252,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
       Implementing Meta-programming and Tactics in F*</li>
   </ul>
   </li>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Then Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Then Software Engineer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://danelahman.github.io/">Danel Ahman</a></b>
   <ul>
@@ -290,7 +292,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:
     <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>][Now Research Scientist at <a href="https://matter-labs.io">Matter Labs</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]<b>[Now Research Scientist at <a href="https://matter-labs.io">Matter Labs</a>]</b></div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://fachini.net/">Guglielmo Fachini</a></b>
   <ul>
@@ -323,7 +325,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a>, 2017-01 to 2017-07:
     Refactoring the F* type-checker</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>,
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[<b>Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>,</b>
 Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a href="https://wwwfr.uni.lu/recherche/fstm/dcs">University of Luxembourg</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.williamjbowman.com">William J. Bowman</a></b>
@@ -354,7 +356,8 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
       <a href="https://arxiv.org/abs/1602.04503">Partial type safety using Coq</a>
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at Université Paris 7] [Now ATER at Université Sorbonne Paris Nord]
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at Université Paris 7] [Then ATER at Université Sorbonne Paris Nord]
+    [Now R&amp;D Engineer at OCamlPro]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/diane-gallois-wong-998175206/">Diane Gallois-Wong</a></b>
@@ -363,10 +366,10 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Then Intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>]
 [Then PhD student at <a href="https://www.lri.fr/">LRI, Université Paris-Sud</a>]
-[Now Research Software Engineer at Nomadic Labs]
+<b>[Now Research Software Engineer at Nomadic Labs]</b>
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://software.imdea.org/~alejandro.aguirre/">Alejandro Aguirre</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://cs.au.dk/~alejandro">Alejandro Aguirre</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="students/alejandro/report.pdf">Towards a Provably Correct Encoding from F* to SMT</a></li>
   </ul>
@@ -385,7 +388,7 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
 [Now PostDoc at University of Edinburgh]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.i2m.univ-amu.fr/perso/simon.forest/">Simon Forest</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://pageperso.lis-lab.fr/simon.forest">Simon Forest</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2015-03 to 2015-08:
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
@@ -395,7 +398,8 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
 [MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
 [Then MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]
 [Then PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]<br/>
-[Now at PostDoc at Institut de Mathématiques de Marseille (I2M)]
+[Then PostDoc at Institut de Mathématiques de Marseille (I2M)]
+[Then PostDoc at LIS at Aix-Marseille Université]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a></b>
@@ -405,11 +409,10 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>]
-[Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> MSc student]
+[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
 [Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
 [Then PostDoc at <a href="http://www.ccs.neu.edu/">Northeastern University</a>]
-[Now Formal Verification Research Engineer at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]
+<b>[Now Formal Verification Research Engineer at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]</b>
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/nickgiannarakis">Nick Giannarakis</a></b>
@@ -423,7 +426,7 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
 [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> MSc student]
 [Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
 [Then PostDoc at University of Wisconsin-Madison]
-[Now Applied Scientist at Amazon Web Services (AWS)]
+<b>[Now Applied Scientist at Amazon Web Services (AWS)]</b>
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a></b>
@@ -431,7 +434,7 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2011-04-04:<br/> <a href="https://web.archive.org/web/20150601090128/http://www.infsec.cs.uni-saarland.de/projects/expi2java">Mechanized Formalization of a Transformation from an Extensible Spi Calculus to Java</a></li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-28:<br/><a href="https://web.archive.org/web/20150601090128/http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java - An Extensible Code Generator for Security Protocols</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] <!-- [First employment <a href="http://www.de.capgemini.com">Capgemini</a>] --> [Now at <a href="http://www.luxoft.com/">Luxoft</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] <!-- [First employment <a href="http://www.de.capgemini.com">Capgemini</a>] --> [Now Technical Lead at <a href="http://www.luxoft.com/">Luxoft</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.tarrach.eu/">Thorsten Tarrach</a></b>
   <ul>
@@ -439,14 +442,14 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="https://thorstent.github.io/theses/bachelor.pdf"> Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [Then PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>] [Then research engineer at the <a href="http://www.ait.ac.at/">Austrian Institute of Technology (AIT)</a>]
-[Now working at AWS in the S3 Automated Reasoning Group]
+<b>[Now Senior Applied Scientist at AWS in the S3 Automated Reasoning Group]</b>
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/martin-grochulla-824414135/">Martin Grochulla</a></b>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2009-01-06 (co-advised with Matteo Maffei)<br/><a href="students/grochulla/master.pdf">Security Despite System Compromise with Zero-Knowledge Proofs </a></li>
   </ul>
-  <div style="font-size: small; small margin-top: 0.5ex; margin-left: 3ex">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [<a href="http://people.mmci.uni-saarland.de/~mgrochul/">Then PhD student at the MPI-INF</a>] [Now at Mercedes-Benz AG]</div></li>
+  <div style="font-size: small; small margin-top: 0.5ex; margin-left: 3ex">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [<a href="http://people.mmci.uni-saarland.de/~mgrochul/">Then PhD student at the MPI-INF</a>] [Now IT Project Manager at Mercedes-Benz]</div></li>
 </ul>
 
 </body>
