--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://dl.acm.org/journal/tops">ACM Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
+    <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
   </li>
 
   <li style="margin-bottom: 1ex;">
