--- a/group.html
+++ b/group.html
@@ -167,7 +167,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [Now PostDoc at LMF, Université Paris-Saclay]
+  [Then PostDoc at LMF, Université Paris-Saclay]<br/>
+  [<b>Now Maître de Conférences (Associate Professor) at Université Paris-Saclay</b>]
   </div>  
   </li>
 
