--- a/group.html
+++ b/group.html
@@ -168,7 +168,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
   [Then PostDoc at LMF, Université Paris-Saclay]<br/>
-  [<b>Now Maître de Conférences (Associate Professor) at Université Paris-Saclay</b>]
+  [<b>Now Maître de Conférences (Associate Professor) at <a href="https://www.universite-paris-saclay.fr/en/education/master/computer-science">Université Paris-Saclay</a> and <a href="https://lmf.cnrs.fr/Main/HomePage?lang=en">LMF</a></b>]
   </div>  
   </li>
 
@@ -262,8 +262,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   </li>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-[Then PostDoc at <a href="https://www.fmf.uni-lj.si/en/">University of Ljubljana</a>][<b>Now Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a></b>]</div></li>
-
+[Then PostDoc at <a href="https://www.fmf.uni-lj.si/en/">University of Ljubljana</a>]
+[<b>Now Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a></b>]</div></li>
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>
   <ul>
     <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at University of Pennsylvania; 2011-08 to 2017-10,<br/> Co-Supervised with Benjamin C. Pierce:
@@ -318,7 +318,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [PhD Student at <a href="https://www.eecs.mit.edu/">MIT</a>]
-[Now at Amazon AWS] [<b>Now Assistant Professor at <a href="https://www.epfl.ch/schools/ic/">EPFL</a></b>]
+[Then at Amazon AWS] [<b>Now Assistant Professor at <a href="https://www.epfl.ch/schools/ic/">EPFL</a></b>]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://tomer.libal.info/">Tomer Libal</a></b>
