--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a></b>, former PostDoc in my group, started as Associate Professor (Maître de Conférences) at <a href="https://www.universite-paris-saclay.fr/en/education/master/computer-science">Université Paris-Saclay</a> and <a href="https://lmf.cnrs.fr/Main/HomePage?lang=en">LMF</a> in September 2023.</li>
+
   <li style="margin-bottom: 1ex;">
     <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages</a>, POPL</b>
     (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
