--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ could contribute:
   <!-- <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li> -->
   <!-- <li>Submission deadlines: <del>15 May 2023, 30 Sept 2023, and</del> <b>3 Feb 2024</b></li> -->
   <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li>
-  <li>Next submission deadlines (<a href="https://csf2025.ieee-security.org">CSF 2025</a>): 21 May 2024, 1 October 2024, 4 February 2025</li>
+  <li>Next submission deadlines (<a href="https://csf2025.ieee-security.org">CSF 2025</a>): 28 May 2024, 1 October 2024, 4 February 2025</li>
   </ul>
   </li>
 
@@ -197,17 +197,17 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, graduated PhD student I co-supervised at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, started as Assistant Prof. at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in Jan 2023.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>, co-supervised <!-- PhD --> student at CIFASIS-CONICET and UNR, Argentina, started as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in Jan 2023.</li>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>, co-supervised <\!-- PhD -\-> student at CIFASIS-CONICET and UNR, Argentina, started as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in Jan 2023.</li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, graduated PhD student I supervised at
-  MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, graduated PhD student I supervised at -->
+  <!-- MPI-SP<\!-- (and before that Inria Paris) -\->, took a Formal Verification Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li> -->
 
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Organizer)
-  <!-- <ul> --> 
-  <!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Organizer) -->
+  <!-- <\!-- <ul> -\->  -->
+  <!-- <\!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></b> for<br/> -->
   <!-- <a href="https://github.com/SSProve/ssprove">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a> -->
