--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <a href="#misc">Misc</a>
 </p>
 
-<h2 id="projects">Research Projects</h2>
+<h2 id="projects">Recent Research Projects</h2>
 
 <!--
 <h2 id="students">Looking for Students and Young Researchers</h2>
@@ -105,7 +105,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: Verification Language for Effectful Programs</a></b>
 (<!-- <a href="https://catalin-hritcu.github.io/students/topics/2019/fstar-topics.pdf">topics</a>; -->
  <a href="https://github.com/FStarLang/FStar">code</a>;
- <a href="https://www.fstar-lang.org/#papers">papers</a>)
+ <a href="https://www.fstar-lang.org/index.html#research">papers</a>)
     <!-- <ul> -->
     <!--   <li> -->
     <!--   <b>Currently looking for a Master's (M2) intern who can continue with a PhD</a></b> -->
