--- a/index.html
+++ b/index.html
@@ -76,18 +76,23 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <a href="#misc">Misc</a>
 </p>
 
+<h2 id="students">Looking for PostDoc</h2>
+
+<p style="width:40em; text-align: left">
+<b>Postdoctoral Researcher position</b> available in my <a href="#group">Formally
+Verified Security group</a> at
+<a href="https://www.mpi-sp.org">MPI-SP</a>. Looking for candidates
+with excellent research track record and publications at top conferences in
+PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
+<!-- programming languages -->
+
+<!-- We are looking for talented, highly motivated students and young -->
+<!-- researchers, for research internships and for PhD, PostDoc, and -->
+<!-- Researcher positions. Here are three of my projects to which students -->
+<!-- could contribute: -->
+<!-- <\!--(but there are many other possible ones):-\-> -->
+
 <h2 id="projects">Recent Research Projects</h2>
-
-<!--
-<h2 id="students">Looking for Students and Young Researchers</h2>
-<p style="width:42em; text-align: left">
-
-We are looking for talented, highly motivated students and young
-researchers, for research internships and for PhD, PostDoc, and
-Researcher positions. Here are three of my projects to which students
-could contribute:
-<!--(but there are many other possible ones):--></p>
-
 
 <ul>
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
@@ -103,8 +108,8 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: Verification Language for Effectful Programs</a></b>
-(<!-- <a href="https://catalin-hritcu.github.io/students/topics/2019/fstar-topics.pdf">topics</a>; -->
- <a href="https://github.com/FStarLang/FStar">code</a>;
+(<!-- <a href="https://catalin-hritcu.github.io/students/topics/2019/fstar-topics.pdf">topics</a>;
+--><a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/index.html#research">papers</a>)
     <!-- <ul> -->
     <!--   <li> -->
