--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 in <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.<br/>
 I am also Professor (APL) associated with the <a href="https://informatik.rub.de/en/">Faculty of Computer Science</a>
 of <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>
-and PI of the <a href="https://casa.rub.de/en/">CASA Excellence Center</a>.
+and PI of the <a href="https://casa.rub.de/en/">CASA Excellence Center</a> at RUB.
 </p>
 
 <p style="width:42em; text-align: left">
