--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
+<!-- https://popl24.sigplan.org/series/CPP -->
+  <ul>
+  <li>Abstract deadline: 10 September 2024</li>
+  <li>Submission deadline: 17 September 2024</li>
+  <!-- <li>Early registration deadline: 14 December 2023</li> -->
+  <li>Conference: 20-21 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org">POPL</a>)</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;">
     <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
   </li>
@@ -178,15 +188,6 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <!-- <li style="margin-bottom: 1ex;"><b>Open position: -->
   <!-- <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b> -->
   <!-- </li> -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl24.sigplan.org/series/CPP"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
-  <ul>
-  <!-- <li>Abstract deadline: 12 September 2023</li> -->
-  <!-- <li>Submission deadline: 19 September 2023</li> -->
-  <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <!-- <li>Conference: 15-16 January 2024, London, UK (with <a href="https://popl24.sigplan.org">POPL</a>)</li> -->
-  </ul>
-  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <ul>
