--- a/index.html
+++ b/index.html
@@ -145,10 +145,6 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   </li>
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
-  </li>
-
-  <li style="margin-bottom: 1ex;">
     <b><a href="https://www.sigsac.org/ccs/CCS2024/">Computer and Communications Security</a>, CCS</b> <!-- https://www.sigsac.org/ccs.html -->
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
@@ -159,13 +155,17 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
   <!-- <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li> -->
   <!-- <li>Submission deadlines: <del>15 May 2023, 30 Sept 2023, and</del> <b>3 Feb 2024</b></li> -->
   <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li>
-  <li>Next submission deadlines (<a href="https://csf2025.ieee-security.org">CSF 2025</a>): 28 May 2024, 1 October 2024, 4 February 2025</li>
+  <li>Next submission deadlines (<a href="https://csf2025.ieee-security.org">CSF 2025</a>): <strike>28 May 2024</strike>, 1 October 2024, 4 February 2025</li>
   </ul>
   </li>
 
