--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
     <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: Verification Language for Effectful Programs</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://fstar-lang.org">F*: Verification Language for Effectful Programs</a></b>
 (<!-- <a href="https://catalin-hritcu.github.io/students/topics/2019/fstar-topics.pdf">topics</a>;
 --><a href="https://github.com/FStarLang/FStar">code</a>;
- <a href="https://www.fstar-lang.org/index.html#research">papers</a>)
+ <a href="https://fstar-lang.org/index.html#research">papers</a>)
     <!-- <ul> -->
     <!--   <li> -->
     <!--   <b>Currently looking for a Master's (M2) intern who can continue with a PhD</a></b> -->
@@ -449,7 +449,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <!-- </li> -->
 <!--
   <li style="margin-bottom: 1ex;">
-  <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
+  <a href="https://fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
   January 2015
   </li>
   <li style="margin-bottom: 1ex;">
@@ -998,7 +998,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, <!-- 16-27 --> March 2015
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/tutorial/">F* tutorial</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://fstar-lang.org/tutorial/">F* tutorial</a></b>
     <ul style="font-size: small">
 
       <li><a href="http://cufp.org/2015/">
