--- a/teaching.html
+++ b/teaching.html
@@ -44,7 +44,7 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/tutorial/">F* tutorial</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://fstar-lang.org/tutorial/">F* tutorial</a></b>
     <ul style="font-size: small">
 
       <li><a href="http://cufp.org/2015/">
