--- a/publications.html
+++ b/publications.html
@@ -329,7 +329,7 @@
     Jonathan Protzenko,
     Aseem Rastogi, and
     Nikhil Swamy.
-    <b><a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
+    <b><a href="https://fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></b>.
     In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
     pages 515--529. ACM, January 2017.
   </li>
@@ -376,10 +376,10 @@
     <a href="http://research.microsoft.com/en-us/people/markulf/">Markulf Kohlweiss</a>,
     Jean-Karim Zinzindohoue,
     Santiago Zanella-B&eacute;guelin.
-    <b><a href="https://www.fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
+    <b><a href="https://fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     In 43rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL), pages 256-270, January 2016.
   <ul style="font-size: small">
-    <!-- <li>A draft of the paper was entitled <a href="https://www.fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li> -->
+    <!-- <li>A draft of the paper was entitled <a href="https://fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li> -->
   </ul>
   </li>
 
