--- a/group.html
+++ b/group.html
@@ -45,7 +45,7 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://jerem.yt/">Jérémy Thibault</a></b>
   <ul>
     <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (since 2020-05):<br/>
-    Secure Compartmentalizing Compilation to a Tagged Architecture</li>
+    Formally Secure Compilation of Compartmentalized C Programs</li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:<br/>
     <a href="https://arxiv.org/abs/1807.04603">A Trace-based Proof Technique for Secure Compilation</a></li>
   </ul>
@@ -67,13 +67,13 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b> (Research Student Assistant, RUB)</li>
    <!-- started in April 2024 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/jos-len">Joseph Lenormand</a></b> (Research Intern, ENS Paris-Saclay)</li>
-  <!-- starting in Feb 2024 -->
-
   <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b> (Research Intern, ENS Lyon)</li>
   <!-- starting in May 2024 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b> (Research Intern, University of Edinburgh) -- starting in June 2024</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b> (Research Intern, University of Edinburgh)</li>
+  <!-- started in June 2024 -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b> (Research Intern, ENS Lyon) -- starting in October 2024</li>
 
 </ul>
 
@@ -82,12 +82,31 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (<!-- PhD -->Student,
-    MPI-SP from Feb 2023 to March 2024, former MPI-SWS)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/jos-len">Joseph Lenormand</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-02 to 2024-06:<br/>
+    Nanopass back-translation of multiple traces for secure compilation proofs
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc Student at ENS Paris-Saclay]
+  </div>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://web.archive.org/web/20230814084618/https://maxi-wuttke.codeberg.page/">Maxi Wuttke</a></b></li>
+  <ul>
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-02 to 2024-03:
+    Verifying probability bounds in F*
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [Former PhD Student at MPI-SWS]
+  </div>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mori1116.github.io">Dongjae Lee</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-03 to 2022-08:
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-03 to 2023-08:
     Back-Translation Proof for Formally Secure Compilation of Compartmentalized C Programs
     </li>
   </ul>
@@ -109,8 +128,8 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Co-Supervised <!-- PhD --> Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario 2017-04 to 2022-12:<br/>
-     Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
+    <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario 2017-04 to 2022-12:<br/>
+     The F* Language for Semi-Automatic Verification of Effectful Programs</li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2018-09 to 2018-12:<br/> <a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof Automation with SMT, Tactics, and Metaprograms</a></li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
   </ul>
