--- a/index.html
+++ b/index.html
@@ -571,15 +571,12 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><a href="https://github.com/sharwig">Sebastian Harwig</a> (Research Student Assistant, RUB)</li>
    <!-- started in April 2024 -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/jos-len">Joseph Lenormand</a> (Research Intern, ENS Paris-Saclay)</li>
-
   <li style="margin-bottom: 1ex;"><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a> (Research Intern, ENS Lyon)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a> (Research Intern, University of Edinburgh) -- starting in June 2024</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a> (Research Intern, University of Edinburgh)</li>
+  <!-- started in June 2024 -->
 
   <li style="margin-bottom: 1ex;"><a href="">Léon Ducruet</a> (Research Intern, ENS Lyon) -- starting in October 2024</li>
-
-  <!-- <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li> -->
 
 </ul>
 
@@ -602,7 +599,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu, and
     Andrew Tolmach.
     <b><a href="http://arxiv.org/abs/2401.16277">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
-    Accepted at CCS'24, Draft from April 2024.
+    Accepted at CCS'24, Draft from July 2024.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
       <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
