--- a/index.html
+++ b/index.html
@@ -804,6 +804,12 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Short teaser for our courses at Ruhr Uni Bochum</em></a>
+    <ul style="font-size: small">
+      <li>Introduction of MPI-SP during final <a href="https://www.youtube.com/channel/UC1usFRN4LCMcfIV7UjHNuQg/videos">Introduction to Cryptography 2</a> lecture:
+        <a href="talks/2024-07-19-Courses-at-RUB.pdf">slides</a> and <b><a href="https://youtu.be/2JYd_IKh1mI">video</a></b> (2024-07-19)</li>
+    </ul>
+
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
 
     <ul style="font-size: small">
